천영륜_개인페이지 연결.

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@
     background-position: center;
 }
 #img-back-4 {
-    background-image: url('.\\img_c.jpeg');
+    background-image: url('.\\img_c.jpg');
     background-size: cover;
     background-position: center;
 }
