개인페이지 프로필경로 수정

--- a/kim.css
+++ b/kim.css
@@ -199,7 +199,7 @@ main {
 .profileImg {
     width: 55px;
     height: 55px;
-    background-image: url('/img.k.JPG');
+    background-image: url('./img.k.JPG');
     background-position: center center;
     background-size: cover;
     border-radius: 40%;
