--- a/style_soli.css
+++ b/style_soli.css
@@ -9,9 +9,9 @@ body {
     height: 100%;
 }
 
-html {
+/* html {
     scroll-behavior: smooth;
-}
+} */
 
 body {
     background: #eee;
@@ -35,6 +35,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 100;
 }
 
 #header>a>h1 {
@@ -182,7 +183,7 @@ body {
 
 #wrap_cards {
     width: 640px;
-    margin-left: 150px;
+    margin: 0 auto 0 auto;
 
 }
 .card {
