--- a/style_soli.css
+++ b/style_soli.css
@@ -190,6 +190,10 @@ body {
     margin-bottom: 10px;
 }
 
+.btn.btn-light{
+margin: 0px 0 0 88%;
+}
+
 #move_top {
     font-size: 20px;
     position: fixed;
