이미지명 변경

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
     background-position: center;
 }
 #img-back-2 {
-    background-image: url('.\\_MG_9017.jpg');
+    background-image: url('.\\img_sl.jpg');
     background-size: cover;
     background-position: center;
 }
